# softadastra-py

./: README.md  init_softadastra_structure.sh  pyproject.toml
frontend/: main.py
src/softadastra/: __init__.py
src/softadastra/algorithms/: sorting.py
src/softadastra/backend/: cpp_bindings.py  python_backend.py
src/softadastra/containers/: vector.py
src/softadastra/io/: filesystem.py
src/softadastra/memory/: memory.py
src/softadastra/ressources/: base_ressource.py  products.py
src/softadastra/validation/: validators.py
tests/test_algorithms/: test_sorting.py
