[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softadastra"
version = "0.1.0"
description = "Python SDK for the Softadastra ecosystem – APIs and utilities for e-commerce integration in Africa."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gaspard Kirira", email = "gaspardkirira@outlook.com"}
]
keywords = ["softadastra", "sdk", "ecommerce", "africa", "marketplace"]

dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://softadastra.com"
Repository = "https://github.com/softadastra/softadastra-py"
Documentation = "https://softadastra.com/docs"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
