[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softadastra"
version = "0.1.0"
description = "Standard Python library for the Softadastra ecosystem."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Gaspard Kirira", email = "gaspardkirira@outlook.com" }
]
keywords = ["softadastra", "sdk", "africa", "marketplace"]

dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://softadastra.com"
Repository = "https://github.com/softadastra/softadastra-py"
Documentation = "https://softadastra.com/docs"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"softadastra" = ["py.typed"]
